prevented horizontal scrolling in mobile

--- a/src/angular-material-demo-theme.scss
+++ b/src/angular-material-demo-theme.scss
@@ -19,3 +19,7 @@ $theme: mat-light-theme($primary, $accent);
 
   @include angular-material-theme($theme);
 }
+
+.mat-drawer-content {
+  overflow: hidden !important;
+}
